tests/errors/054-integer-separators.e
1_
¬
{
    "message": "Invalid character '_' in number literal",
    "source_file": "tests/errors/054-integer-separators.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 2,
            "message": "Invalid character '_' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
¬
1__000
¬
{
    "message": "Invalid character '_' in number literal",
    "source_file": "tests/errors/054-integer-separators.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 3,
            "message": "Invalid character '_' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
¬
1.0_
¬
{
    "message": "Invalid character '_' in number literal",
    "source_file": "tests/errors/054-integer-separators.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 4,
            "message": "Invalid character '_' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
¬
1.0__0
¬
{
    "message": "Invalid character '_' in number literal",
    "source_file": "tests/errors/054-integer-separators.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 5,
            "message": "Invalid character '_' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
¬
1._0
¬
{
    "message": "Invalid character '_' in number literal",
    "source_file": "tests/errors/054-integer-separators.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 3,
            "message": "Invalid character '_' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
